fixed shifting elements below h1

--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,7 @@
+html {
+  font-size: 62.5%;
+}
+
 html,
 body {
   position: relative;
